<resources>

    <!-- Activities labels -->
    <string name="app_name">My News</string>
    <string name="search_activity">Search Articles</string>
    <string name="search_results_activity">Search Results</string>
    <string name="notifications_activity">Notifications</string>

    <!-- Menu -->
    <!-- Menu items names -->
    <string name="menu_item_params">Parameters</string>
    <string name="menu_item_search">Search</string>
    <!-- Nav drawer -->
    <string name="navigation_drawer_help">Help</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Share -->
    <string name="share_title">Share</string>

    <!-- Fragments names -->
    <string name="tab_title_1">Top Stories</string>
    <string name="tab_title_2">Most Popular</string>
    <string name="tab_title_3">Sciences</string>

    <!-- Main Activity -->
    <!-- Dialog About -->
    <string name="activity_main_dialog_about_title">About</string>
    <string name="activity_main_dialog_about_message">"<p>This application is developed by Desperu.\nSource code on <a href="https://github.com/desperu/MyNews">github.com</a>.\n\nIf you have an issue with this application, please search <a href="https://github.com/desperu/MyNews/issues">here</a>", create a new issue if there isn't yours. \nYou must create an account if you haven't.\n\nYou need help to use MyNews application?\nFind the documentation "<a href="https://github.com/desperu/MyNews/blob/master/Documentation/Documentation%20Fonctionnelle%20MyNews.pdf">here</a>.</p>"</string>
    <string name="activity_main_dialog_about_positive_button">OK</string>

    <!-- Article list fragment -->
    <!-- Dialog no response -->
    <string name="fragment_article_list_dialog_no_response_title">No Result !</string>
    <string name="fragment_article_list_dialog_no_response_message">There\'s no result for your search !</string>
    <string name="fragment_article_list_dialog_no_response_positive_button">OK</string>

    <!-- Search fragment -->
    <!-- Search edit text -->
    <string name="fragment_search_articles_edit_text_hint">Search query term</string>
    <!-- text view -->
    <string name="fragment_search_articles_text_view_begin_date">Begin Date</string>
    <string name="fragment_search_articles_text_view_end_date">End Date</string>
    <!-- check box -->
    <string name="fragment_search_articles_checkbox_arts">Arts</string>
    <string name="fragment_search_articles_checkbox_business">Business</string>
    <string name="fragment_search_articles_checkbox_entrepreneurs">Entrepreneurs</string>
    <string name="fragment_search_articles_checkbox_politics">Politics</string>
    <string name="fragment_search_articles_checkbox_sports">Sports</string>
    <string name="fragment_search_articles_checkbox_travel">Travel</string>
    <!-- button and switch -->
    <string name="fragment_search_articles_button_search">Search</string>
    <string name="fragment_search_articles_button_notify_search">Notify Search</string>
    <string name="fragment_search_articles_switch">Enable notifications (once per day)</string>
    <!-- Dialog no section or date problem-->
    <string name="fragment_search_articles_dialog_no_section_title">No section selected</string>
    <string name="fragment_search_articles_dialog_no_section_message">You must select at least one section !\n(Arts, Travel, …)</string>
    <string name="fragment_search_articles_dialog_date_problem_title">"Mistake with searches dates !"</string>
    <string name="fragment_search_articles_dialog_date_problem_message">"Begin date is upper than End date …\nIt's impossible !!!"</string>
    <string name="fragment_search_articles_dialog_no_section_positive_button">OK</string>

    <!-- Notifications -->
    <!-- Enable / Disable notifications -->
    <string name="toast_notification_enable">Notification enabled !</string>
    <string name="toast_notification_disable">Notification disabled !</string>
    <!-- Notifications data -->
    <string name="toast_notification_data_saved">Notification data saved !</string>
    <string name="toast_notification_section_data_not_saved">Notification sections data not saved !\nNo section selected ! Last save restored !</string>
    <!-- Notifications body -->
    <string name="notification_ticker">"MyNews : "</string>
    <string name="notification_title">Find articles ! Click to see !</string>
    <string name="notification_text">" articles find with yours preferences !"</string>
    <string name="notification_subtext">" new articles you haven't read !"</string>

</resources>