<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/activity_main_drawer_top_stories"
            android:icon="@drawable/ic_fiber_new_white_24dp"
            android:title="@string/tab_title_1"/>

        <item
            android:id="@+id/activity_main_drawer_most_popular"
            android:icon="@drawable/ic_grade_white_24dp"
            android:title="@string/tab_title_2"/>

        <item
            android:id="@+id/activity_main_drawer_sciences"
            android:icon="@drawable/ic_public_white_24dp"
            android:title="@string/tab_title_3"/>

        <item
            android:id="@+id/activity_main_drawer_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/search_activity"/>

    </group>

    <item android:title="@string/menu_item_params">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/activity_main_drawer_notifications"
                    android:icon="@drawable/ic_notifications_active_white_24dp"
                    android:title="@string/notifications_activity"/>

                <item
                    android:id="@+id/activity_main_drawer_about"
                    android:icon="@drawable/ic_more_horiz_white_24dp"
                    android:title="@string/navigation_drawer_about"/>

                <item
                    android:id="@+id/activity_main_drawer_help"
                    android:icon="@drawable/ic_help_white_24dp"
                    android:title="@string/navigation_drawer_help"/>

            </group>

        </menu>

    </item>

</menu>