<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
    android:id="@+id/menu_activity_main_search"
    android:icon="@drawable/ic_search_white_24dp"
    app:showAsAction="ifRoom"
    android:title="@string/menu_item_search">
    </item>

    <group
        android:id="@+id/menu_activity_main_more"
        android:icon="@drawable/ic_more_vert_white_24dp">

        <item
            android:id="@+id/menu_activity_main_notifications"
            android:title="@string/notifications_activity"/>

        <item
            android:id="@+id/menu_activity_about"
            android:title="@string/navigation_drawer_about"/>

        <item
            android:id="@+id/menu_activity_help"
            android:title="@string/navigation_drawer_help"/>

    </group>

</menu>