<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/fragment_search_articles_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/fragment_search_articles_edit_text_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragment_search_articles_text_view_begin_date"/>

            <Spinner
                android:id="@+id/fragment_search_articles_spinner_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <CheckBox
                android:id="@+id/fragment_search_articles_checkbox_arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_search_articles_checkbox_arts"/>

            <CheckBox
                android:id="@+id/fragment_search_articles_checkbox_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_search_articles_checkbox_Business"/>

            <CheckBox
                android:id="@+id/fragment_search_articles_checkbox_entrepreneurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_search_articles_checkbox_entrepreneurs"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragment_search_articles_text_view_begin_date"/>

            <Spinner
                android:id="@+id/fragment_search_articles_spinner_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <CheckBox
                android:id="@+id/fragment_search_articles_checkbox_politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_search_articles_checkbox_politics"/>

            <CheckBox
                android:id="@+id/fragment_search_articles_checkbox_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_search_articles_checkbox_sports"/>

            <CheckBox
                android:id="@+id/fragment_search_articles_checkbox_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_search_articles_checkbox_travel"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/fragment_search_articles_button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/fragment_search_articles_button_search"/>

    <Switch
        android:id="@+id/fragment_search_articles_switch_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/fragment_search_articles_switch"/>

</LinearLayout>